Sample uses Razor

--- a/Stasistium.Sample/Layout/ViewStart.cshtml
+++ b/Stasistium.Sample/Layout/ViewStart.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Stasistium.Sample
 @model Stasistium.Documents.MetadataContainer;
 @{
-    string? l = Model.GetValue<PageLayoutMetadata>()?.Layout;
+    var l = Model.GetValue<PageLayoutMetadata>()?.Layout;
     if (String.IsNullOrWhiteSpace(l))
     {
         l = @"base.cshtml";
