--- a/Stasistium.Core/Stages/ConcatStage.tt
+++ b/Stasistium.Core/Stages/ConcatStage.tt
@@ -52,6 +52,55 @@ for (int i = 1; i <= numberOfElements; i++)
 
 #>
 
+<#
+
+
+
+for (int i = 1; i <= numberOfElements; i++)
+{
+    string classGenerics = string.Join(", ", Enumerable.Range(1,i).Select(x=> "TItemCache"+x+", TCache"+x) );
+    string baseGenerics = string.Join(", ", Enumerable.Range(1,i).Select(x=> "T, TItemCache"+x+", TCache"+x) );
+    string whereStatements = string.Join("\n        ", Enumerable.Range(1,i).Select(x=> "where TItemCache"+x+" : class\n        where TCache"+x+" : class") );
+
+    string constructorArguments = string.Join(", ", Enumerable.Range(1,i).Select(x=> "StagePerformHandler<T, TItemCache"+x+", TCache"+x+"> input"+x) );
+    string baseArguments = string.Join(", ", Enumerable.Range(1,i).Select(x=> "input"+x) );
+    
+    string overideArguments =string.Join(", ", Enumerable.Range(1,i).Select(x=> "ImmutableList<IDocument<T>> input"+x) );
+    string toListArguments =string.Join(", ", Enumerable.Range(1,i).Select(x=> "input"+x) );
+
+#>
+
+    public class ConcatStageMany<T, <#=classGenerics#>> : GeneratedHelper.Multiple.Simple.OutputMultiSimpleInputSingle0List<#=i#>StageBase<<#=baseGenerics#>, T>
+        <#=whereStatements#>
+    {
+        public ConcatStageMany(<#=constructorArguments#>, GeneratorContext context) : base(<#=baseArguments #>, context)
+        {
+        }
+
+        protected override Task<ImmutableList<IDocument<T>>> Work(<#=overideArguments#>, OptionToken options)
+        {
+            if (input1 is null)
+                throw new ArgumentNullException(nameof(input1));
+
+            return Task.FromResult(input1
+<#
+for (int j = 2; j <= i; j++)
+{
+#>
+                .AddRange(input<#= j #>)
+<#
+}
+#>
+            );
+        }
+    }
+
+
+<#
+             }
+
+#>
+
 }
 
 namespace Stasistium
@@ -77,6 +126,29 @@ for (int i = 1; i <= numberOfElements; i++)
         {
             <#=notNull#>
             return new ConcatStage<T, <#=classGenerics#>>(<#=argumentList2 #>, input1.Context);
+        }
+<#
+             }
+
+#>
+
+<#
+for (int i = 1; i <= numberOfElements; i++)
+{
+    string classGenerics = string.Join(", ", Enumerable.Range(1,i).Select(x=> "TItemCache"+x+", TCache"+x) );
+    string argumentList = string.Join(", ", Enumerable.Range(1,i).Select(x=> "MultiStageBase<T, TItemCache"+x+", TCache"+x+"> input"+x) );
+    string argumentList2 = string.Join(", ", Enumerable.Range(1,i).Select(x=> "input"+x+".DoIt") );
+    string generics = string.Join(", ", Enumerable.Range(1,i).Select(x=> "TItemCache"+x+", TCache"+x) );
+    
+    string whereStatements = string.Join("\n            ", Enumerable.Range(1,i).Select(x=> "where TItemCache"+x+" : class\n        where TCache"+x+" : class") );
+    string notNull = string.Join("\n            ", Enumerable.Range(1,i).Select(x=> "if(input"+x+" is null)\n                 throw new ArgumentNullException(nameof(input"+x+"));") );
+
+#>
+        public static ConcatStageMany<T, <#=classGenerics#>> Concat<T, <#=generics #>>(this <#=argumentList#>)
+            <#=whereStatements#>
+        {
+            <#=notNull#>
+            return new ConcatStageMany<T, <#=classGenerics#>>(<#=argumentList2 #>, input1.Context);
         }
 <#
              }
