Fix bug in concatstages
we throw a This should not happen Exception in an actual valid case.

--- a/Stasistium.Core/Stages/ConcatStage.tt
+++ b/Stasistium.Core/Stages/ConcatStage.tt
@@ -149,9 +149,9 @@ for (int j = 1; j <= i; j++)
                         {
                             var childPerformed = await child.Perform;
 
-                            string? oldHash = null;
-                            if (cache != null && !cache.IdToHash.TryGetValue(childPerformed.result.Id, out oldHash))
-                                throw this.Context.Exception("Should Not Happen");
+                            
+                            if (cache != null && !cache.IdToHash.TryGetValue(childPerformed.result.Id, out string? oldHash))
+                                oldHash = null;
                             var childHashChanges = oldHash != childPerformed.result.Hash;
 
                             list.Add(StageResult.Create(childPerformed.result, childPerformed.result.Hash, childHashChanges, childPerformed.result.Id));
