--- a/Stasistium.Core/Stages/ConcatStage.tt
+++ b/Stasistium.Core/Stages/ConcatStage.tt
@@ -150,7 +150,7 @@ for (int j = 1; j <= i; j++)
                             var childPerformed = await child.Perform;
 
                             
-                            if (cache != null && !cache.IdToHash.TryGetValue(childPerformed.result.Id, out string? oldHash))
+                            if (cache == null || !cache.IdToHash.TryGetValue(childPerformed.result.Id, out string? oldHash))
                                 oldHash = null;
                             var childHashChanges = oldHash != childPerformed.result.Hash;
 
