--- a/Stasistium.Core/Stages/GeneratedBaseStages.tt
+++ b/Stasistium.Core/Stages/GeneratedBaseStages.tt
@@ -192,6 +192,17 @@ for(int j = 0; j< list; j++){
 <#for(int j = 0; j< list; j++){#>
             || inputList<#= j #>Result.HasChanges
 <#}#>;
+
+<#for(int j = 0; j< single; j++){#>
+            if(inputSingle<#= j #>Result.HasChanges)
+                this.Context.Logger.Info($"{this.GetType()} found Changes for input with id: {inputSingle<#= j #>Result.Id}");
+<#}#>
+<#for(int j = 0; j< list; j++){#>
+            if(inputList<#= j #>Result.HasChanges)
+                this.Context.Logger.Info($"{this.GetType()} found Changes for list with ids: {string.Join(", ", inputList<#= j #>Result.Ids)}");
+
+<#}#>;
+
             System.Diagnostics.Debug.Assert(cache != null || hasChanges);
             var id = cache?.Id;
             if (hasChanges || (this.updateOnRefresh && options.Refresh))
