--- a/Stasistium.Core/Stages/ConcatStage.tt
+++ b/Stasistium.Core/Stages/ConcatStage.tt
@@ -182,18 +182,18 @@ for (int j = 1; j <= i; j++)
                         throw this.Context.Exception("Should Not Happen");
                     for (int i = 0; i < cache.Ids<#= j #>.Length; i++)
                     {
-
+                        var currentIndex = i;
                         var childTask = LazyTask.Create(async () =>
                         {
                             var performed = await result<#= j #>.Perform;
-                            var chiledIndex = performed.result[i];
+                            var chiledIndex = performed.result[currentIndex];
                             var childPerform = await chiledIndex.Perform;
                             // We are in the no changes part. So ther must be no changes.
                             System.Diagnostics.Debug.Assert(!chiledIndex.HasChanges);
 
                             return (childPerform.result, childPerform.result.Hash);
                         });
-                        list.Add(StageResult.Create(childTask, false, cache.Ids<#= j #>[i]));
+                        list.Add(StageResult.Create(childTask, false, cache.Ids<#= j #>[currentIndex]));
                     }
                     newCache.PreviouseCache<#= j #> = cache.PreviouseCache<#= j #>;
                     newCache.Ids<#= j #> = cache.Ids<#= j #>;
